syntax="proto3";

package grpc;

option go_package="internal/adapter/grpc/pb";

message PaginationParam {
    int64 limit = 1;
    int64 skip = 2;
}

message ListMeta {
    int64 limit = 1;
    int64 skip = 2;
    int64 total = 3;
}